<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.procnect.LoginActivity">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:backgroundTint="@color/white_grey"
        android:hint="@string/hint_email"
        android:drawableStart="@drawable/ic_email_white_24dp"
        android:drawablePadding="8dp"
        android:textSize="16sp"
        android:textColorHint="@color/white_grey"
        android:textColor="@color/colorAccent"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:backgroundTint="@color/white_grey"
        android:drawableStart="@drawable/ic_lock_open_white_24dp"
        android:drawablePadding="8dp"
        android:hint="@string/hint_password"
        android:textSize="16sp"
        android:textColorHint="@color/white_grey"
        android:textColor="@color/colorAccent"
        android:inputType="textWebPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <CheckBox
        android:id="@+id/cb_ShowHidePpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_weight="1"
        android:text="@string/show_pwd"
        android:textColor="@color/colorAccent"
        android:buttonTint="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end"
        android:padding="5dp"
        android:background="@drawable/textview_selector"
        android:text="@string/forgot"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintRight_toRightOf="@+id/etPassword"
        android:focusable="true"/>

    <Button
        android:id="@+id/bLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:textSize="16sp"
        android:background="@drawable/loginbutton_selector"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="@+id/etPassword"
        app:layout_constraintRight_toRightOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/cb_ShowHidePpassword"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tvRegisterHere"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_registerhere"
        android:textColor="@color/white_grey"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="@+id/bLogin"
        app:layout_constraintRight_toRightOf="@+id/bLogin"
        app:layout_constraintTop_toBottomOf="@+id/bLogin"
        android:layout_marginTop="8dp"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button_register_loginactivity"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/button_register_loginactivity"
        android:textSize="16sp"
        android:background="@drawable/loginbutton_selector"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="@+id/tvRegisterHere"
        app:layout_constraintRight_toRightOf="@+id/tvRegisterHere"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterHere"
        android:layout_marginTop="8dp" />

</android.support.constraint.ConstraintLayout>
</ScrollView>
