<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.procnect.LoginActivity">

    <TextView
        android:id="@+id/tv_forgot_password_emailid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:padding="10dp"
        android:text="@string/forgot_password_emailid"
        android:textColor="@color/white_grey"

        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_registered_emailid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password_emailid"
        app:layout_constraintLeft_toLeftOf="@id/tv_forgot_password_emailid"
        app:layout_constraintRight_toRightOf="@id/tv_forgot_password_emailid"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_email_white_24dp"
        android:drawablePadding="8dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:backgroundTint="@color/white_grey"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_SecurityQuestions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_registered_emailid"
        app:layout_constraintLeft_toLeftOf="@id/et_registered_emailid"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:text="@string/hint_SecurityQuestions"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/et_Ques1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_SecurityQuestions"
        app:layout_constraintLeft_toLeftOf="@id/tv_forgot_password_emailid"
        app:layout_constraintRight_toRightOf="@id/tv_forgot_password_emailid"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_check_circle_white_24dp"
        android:drawablePadding="8dp"
        android:hint="@string/hint_Ques1"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:backgroundTint="@color/white_grey"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_Ques2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_Ques1"
        app:layout_constraintLeft_toLeftOf="@id/tv_forgot_password_emailid"
        app:layout_constraintRight_toRightOf="@id/tv_forgot_password_emailid"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_check_circle_white_24dp"
        android:drawablePadding="8dp"
        android:hint="@string/hint_Ques2"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:backgroundTint="@color/white_grey"
        android:textSize="16sp" />

    <Button
        android:id="@+id/bSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_next"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:background="@drawable/loginbutton_selector"
        app:layout_constraintLeft_toLeftOf="@+id/tv_forgot_password_emailid"
        app:layout_constraintRight_toRightOf="@+id/tv_forgot_password_emailid"
        app:layout_constraintTop_toBottomOf="@+id/et_Ques2"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>