<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.procnect.LoginActivity">

    <TextView
        android:id="@+id/tv_password_change"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:padding="10dp"
        android:text="@string/hint_tvpasswordchange"
        android:textColor="@color/white_grey"

        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_password_change"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_change"
        app:layout_constraintLeft_toLeftOf="@+id/tv_password_change"
        app:layout_constraintRight_toRightOf="@+id/tv_password_change"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_lock_open_white_24dp"
        android:drawablePadding="8dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:backgroundTint="@color/white_grey"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/et_password_change_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_password_change"
        app:layout_constraintLeft_toLeftOf="@+id/tv_password_change"
        app:layout_constraintRight_toRightOf="@+id/tv_password_change"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_lock_outline_white_24dp"
        android:drawablePadding="8dp"
        android:hint="@string/hint_confirmpassword"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:backgroundTint="@color/white_grey"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/bSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_submit"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:background="@drawable/loginbutton_selector"
        app:layout_constraintLeft_toLeftOf="@+id/tv_password_change"
        app:layout_constraintRight_toRightOf="@+id/tv_password_change"
        app:layout_constraintTop_toBottomOf="@+id/et_password_change_confirm"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>